@@ -223,6 +223,7 @@ def shapes(
     import rasterio.warp
 
     verbosity = ctx.obj['verbosity'] if ctx.obj else 1
+    aws_session = ctx.obj.get('aws_session')
     logger = logging.getLogger('rio')
     dump_kwds = {'sort_keys': True}
     if indent:
@@ -349,7 +350,7 @@ def shapes(
         geojson_type = 'collection'
 
     try:
-        with rasterio.drivers(CPL_DEBUG=(verbosity > 2)):
+        with rasterio.drivers(CPL_DEBUG=(verbosity > 2)), aws_session:
             write_features(
                 stdout, Collection(), sequence=sequence,
                 geojson_type=geojson_type, use_rs=use_rs,
@@ -610,7 +611,7 @@ def rasterize(
 @click.command(short_help="Write bounding boxes to stdout as GeoJSON.")
 # One or more files, the bounds of each are a feature in the collection
 # object or feature sequence.
-@click.argument('INPUT', nargs=-1, type=click.Path(exists=True), required=True)
+@click.argument('INPUT', nargs=-1, type=click.Path(), required=True)
 @precision_opt
 @indent_opt
 @compact_opt
@@ -638,6 +639,7 @@ def bounds(ctx, input, precision, indent, compact, projection, dst_crs,
     """
     import rasterio.warp
     verbosity = (ctx.obj and ctx.obj.get('verbosity')) or 1
+    aws_session = ctx.obj.get('aws_session')
     logger = logging.getLogger('rio')
     dump_kwds = {'sort_keys': True}
     if indent:
@@ -699,7 +701,7 @@ def bounds(ctx, input, precision, indent, compact, projection, dst_crs,
     # Use the generator defined above as input to the generic output
     # writing function.
     try:
-        with rasterio.drivers(CPL_DEBUG=verbosity>2):
+        with rasterio.drivers(CPL_DEBUG=verbosity>2), aws_session:
             write_features(
                 stdout, col, sequence=sequence,
                 geojson_type=geojson_type, use_rs=use_rs,
