@@ -10,12 +10,15 @@ from rasterio.aws import Session
 
 logging.basicConfig(stream=sys.stderr, level=logging.DEBUG)
 
+
 def test_session():
     """Create a session with arguments."""
     s = Session(aws_access_key_id='id', aws_secret_access_key='key',
                  aws_session_token='token', region_name='null-island-1')
-    assert s._creds
-    assert s._session
+    assert s._creds.access_key == 'id'
+    assert s._creds.secret_key == 'key'
+    assert s._creds.token == 'token'
+    assert s._session.region_name == 'null-island-1'
 
 
 def test_session_env(monkeypatch):
@@ -24,28 +27,9 @@ def test_session_env(monkeypatch):
     monkeypatch.setenv('AWS_SECRET_ACCESS_KEY', 'key')
     monkeypatch.setenv('AWS_SESSION_TOKEN', 'token')
     s = Session()
-    assert s._creds
-    assert s._session
-    monkeypatch.undo()
-
-
-def test_session_config(monkeypatch, tmpdir):
-    """Create a session with config files."""
-    monkeypatch.delenv('AWS_ACCESS_KEY_ID', raising=False)
-    monkeypatch.delenv('AWS_SECRET_ACCESS_KEY', raising=False)
-    monkeypatch.delenv('AWS_SESSION_TOKEN', raising=False)
-    credentials = tmpdir.join('credentials')
-    credentials.write(
-        "[default]\n"
-        "aws_access_key_id = id\n"
-        "aws_secret_access_key = key\n")
-    config = tmpdir.join('config')
-    config.write(
-        "[default]\n"
-        "region = null-island-1\n")
-    s = Session(config_dir=str(tmpdir))
-    assert s._creds
-    assert s._session
+    assert s._creds.access_key == 'id'
+    assert s._creds.secret_key == 'key'
+    assert s._creds.token == 'token'
     monkeypatch.undo()
 
 
